# aoc23

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/day01/: part1.py  part2.py
src/day02/: part1.py  part2.py
src/day03/: part1.py  part2.py
src/day04/: part1.py  part2.py
src/day05/: part1.py  part2.py
tests/day01/: test_part01.py  test_part1.py  test_part2.py
tests/day02/: test_part1.py  test_part2.py
tests/day03/: test_part1.py  test_part2.py
tests/day04/: test_part1.py  test_part2.py
tests/day05/: test_part1.py  test_part2.py
